[project]
name = "audio_fft_vis"
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
fft-analyzer = "audio_fft_vis.console:run_FFT_analyzer"
